--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Recipesphere"
         tools:targetApi="31">
         <activity
-            android:name=".ui.register.RegistrationActivity"
+            android:name=".ui.auth.AuthActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
