remove RecipesListFragment.kt and move its logic into parent fragment. also add single recipe fragment. need to work on its xml view

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ constraintlayout = "2.2.0"
 lifecycleLivedataKtx = "2.8.7"
 lifecycleViewmodelKtx = "2.8.7"
 navigationFragmentKtx = "2.8.5"
+navigationSafeArgsGradlePlugin = "2.8.5"
 navigationUiKtx = "2.8.5"
 legacySupportV4 = "1.0.0"
 fragmentKtx = "1.5.6"
